lab4/calicoctl.yml

apiVersion: v1
kind: Pod
metadata:
  name: calicoctl
  namespace: kube-system
spec:
  nodeSelector:
    kubernetes.io/os: linux
  hostNetwork: true
  serviceAccountName: calicoctl
  containers:
  - name: calicoctl
    image: calico/ctl:master
    resources:
      limits:
        memory: "512Mi"
        cpu: "1"
    command:
      - calicoctl
    args:
      - version
      - --poll=1m
