lab4/itdt-front-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: itdt-contained-frontend
spec:
  type: ClusterIP
  selector:
    app: itdt-contained-frontend
  ports:
  - port: 3000
    targetPort: 3000
